# ansible-docker

./: .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release-galaxy.yml  test-molecule.yml
molecule/: ansible.galaxy.cfg
molecule/centos7/: Dockerfile.j2  molecule.yml
molecule/centos8/: Dockerfile.j2  molecule.yml
molecule/debian10/: molecule.yml
molecule/debian8/: molecule.yml
molecule/debian9/: Dockerfile.j2  molecule.yml
molecule/fedora/: molecule.yml
molecule/ubuntu1604/: molecule.yml
molecule/ubuntu1804/: molecule.yml
molecule/ubuntu2004/: molecule.yml
