[tool.poetry]
name = "ansible-docker"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
# see https://docs.ansible.com/ansible/latest/reference_appendices/release_and_maintenance.html
python = "^3.9"
# see https://github.com/ansible/molecule/discussions/3349
ansible = "^7.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
pylint = "^2.7.3"
tox = "^3.23.0"
black = "^21.9b0"
ansible-lint = "^5.1.3"
mkdocs = "^1.1.2"
molecule = {extras = ["docker"], version = "^4.0.3"}
yamllint = "^1.26.0"
mkdocs-material = "^7.3.0"
# fix docker api not supported
# see https://forums.docker.com/t/error-while-fetching-server-api-version-not-supported-url-scheme-http-docker/141942/4
requests = "2.31.0"
pre-commit = "4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
